--- a/Fundamentals 1/index.html
+++ b/Fundamentals 1/index.html
@@ -28,5 +28,6 @@
 
     <script src="script.js"></script>
     <script src="Challange1.js"></script>
+    <script src="Challange2.js"></script>
   </body>
 </html>
