--- a/Fundamentals 2/index.html
+++ b/Fundamentals 2/index.html
@@ -29,5 +29,6 @@
     <script src="Challange1.js"></script>
     <script src="Challange2.js"></script>
     <script src="Challange3.js"></script>
+    <script src="Challange4.js"></script>
   </body>
 </html>
