--- a/Functions/index.html
+++ b/Functions/index.html
@@ -41,5 +41,9 @@
     <button class="buy">Buy new plane 🛩</button>
     <button class="poll">Answer poll ⁉️</button>
     <script src="script.js"></script>
+    <script src="Challange1.js"></script>
+    <script src="Challange2.js"></script>
+    <script src="Challange3.js"></script>
+    <script src="Challange4.js"></script>
   </body>
 </html>
