--- a/Arrays-Bankist/index.html
+++ b/Arrays-Bankist/index.html
@@ -125,6 +125,6 @@
 
     <script src="script.js"></script>
     <script src="Challange1.js"></script>
-    <script src="Challange2.js"></script>
+    <script src="Challange2-3.js"></script>
   </body>
 </html>
