--- a/Arrays-Bankist/index.html
+++ b/Arrays-Bankist/index.html
@@ -77,7 +77,10 @@
 
       <!-- OPERATION: TRANSFERS -->
       <div class="operation operation--transfer">
-        <h2>Transfer money</h2>
+        <div class="transfer">
+          <h2>Transfer money</h2>
+          <h3 class="label--transfer"></h3>
+        </div>
         <form class="form form--transfer">
           <input type="text" class="form__input form__input--to" />
           <input type="number" class="form__input form__input--amount" />
