--- a/Arrays-Bankist/index.html
+++ b/Arrays-Bankist/index.html
@@ -129,5 +129,6 @@
     <script src="script.js"></script>
     <script src="Challange1.js"></script>
     <script src="Challange2-3.js"></script>
+    <script src="Challange4.js"></script>
   </body>
 </html>
