--- a/Numbers-Dates-Timers-Bankist/index.html
+++ b/Numbers-Dates-Timers-Bankist/index.html
@@ -77,7 +77,7 @@
 
       <!-- OPERATION: TRANSFERS -->
       <div class="operation operation--transfer">
-        <div class="transfer">
+        <div class="timeout">
           <h2>Transfer money</h2>
           <h3 class="label--transfer"></h3>
         </div>
@@ -92,7 +92,10 @@
 
       <!-- OPERATION: LOAN -->
       <div class="operation operation--loan">
-        <h2>Request loan</h2>
+        <div class="timeout">
+          <h2>Request loan</h2>
+          <h3 class="label--loan"></h3>
+        </div>
         <form class="form form--loan">
           <input type="number" class="form__input form__input--loan-amount" />
           <button class="form__btn form__btn--loan">&rarr;</button>
