--- a/Numbers-Dates-Timers-Bankist/index.html
+++ b/Numbers-Dates-Timers-Bankist/index.html
@@ -34,6 +34,7 @@
         />
         <button class="login__btn">&rarr;</button>
       </form>
+      <button class="logout__btn">Logout</button>
     </nav>
 
     <main class="app">
